--- a/index.css
+++ b/index.css
@@ -81,6 +81,12 @@
     margin-left: 5em;
 }
 
+@media screen and (max-width:1910px) {
+    #head, body {
+        width: 100%;
+    }
+}
+
 #playCards {
     display: none;
     margin-top: 0%;
