--- a/index.css
+++ b/index.css
@@ -44,7 +44,10 @@ body {
 
 /* Media Query */
 @media screen and (max-width:500px) {
-    .card, #table {
-        width: 50%;
+    .card {
+        width: 20%;
+    }
+    #table {
+        width: 70%;
     }
 }
