--- a/index.css
+++ b/index.css
@@ -45,9 +45,14 @@ body {
 /* Media Query */
 @media screen and (max-width:500px) {
     .card {
-        width: 20%;
+        width: 40%;
+        
     }
     #table {
-        width: 70%;
+        width: 90%;
+    }
+
+    button {
+        width: 50%;
     }
 }
