--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ body {
     button {
         width: 50%;
     }
-    #two {
-      margin-top: 5%;  
+    #into {
+      margin-bottom: 5%;  
     }
 }
